[build-system]
requires = [
    "numpy>=1.25; python_version>'3.8'",
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "pylibamazed"
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "numpy>=1.25; python_version>'3.8'",
    "astropy>=3.1.1",
    "cython>=0.17.0",
    "pandas>=1.0.0",
    "h5py>=2.9",
    "GitPython>=3.1.32",
    "pytest-mock>=3.11.1",
    "jsonschema>=4.17.3",
    "ninja>=1.11",
    "decorator>=5.1.1"
]
authors = [
    {name = "LAM - Laboratoire d'Astrophysique de Marseille", email = "amazed-support@lam.fr"}]
description = "AMAZED python library."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
        "Development Status :: 4 - Production/Stable",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: C++",
        "License :: OSI Approved :: CeCILL-C",
    ]

[project.optional-dependencies]
"reliability" = ["tensorflow>=2.4.0"]

[project.urls]
homepage = "https://www.lam.fr"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["pylibamazed/python/pylibamazed/resources",
                 "pylibamazed/python/pylibamazed/_version.py",
                 "RedshiftLibrary/RedshiftLibrary/version.h"
]
wheel.packages = ["pylibamazed/python/pylibamazed"]

[tool.setuptools_scm]
version_file = "pylibamazed/python/pylibamazed/_version.py"
fallback_version = "1.6.1"


[[tool.scikit-build.generate]]
path = "RedshiftLibrary/RedshiftLibrary/version.h"
location = "source"
template = '''
#define CPF_REDSHIFT_REVISION "${version}"

namespace NSEpic
{
  const char* get_version();
}
'''
