# Build all third party dependencies
IF (BUILD_SHARED_LIBS)
  SET(SHARED_FLAG "--shared")
ELSE()
  SET(SHARED_FLAG "--static")
ENDIF()

# FIND_PACKAGE(Python3 COMPONENTS Interpreter)
SET(Python_ADDITIONAL_VERSIONS "3.4;3.5;3.6;3.7")
FIND_PACKAGE(PythonInterp)
IF (NOT PYTHONINTERP_FOUND OR PYTHON_VERSION_MAJOR LESS 3)
  MESSAGE(FATAL_ERROR "Can't find Python3 interpreter")
ENDIF()

EXECUTE_PROCESS( COMMAND ${PYTHON_EXECUTABLE} buildandinstallthirdparty.py ${PARALLEL_BUILD_FLAG} ${SHARED_FLAG} --prefix ${CMAKE_INSTALL_PREFIX} ${MISSING_THIRDPARTIES}
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  RESULT_VARIABLE result )
